--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -3,22 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-	<EditText 
-	   	android:id="@+id/username"
-	   	android:layout_width="match_parent"
-	   	android:layout_height="wrap_content"
-	    android:hint="@string/username_placeholder"/>
-	<EditText 
-	    android:id="@+id/password"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_below="@id/username"
-	    android:inputType="textPassword"
-	    android:hint="@string/password_placeholder"/>
-	<Button 
-	    android:id="@+id/login_button"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_below="@id/password"
-	    android:text="@string/login_button_text"/>
-	</RelativeLayout>
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:ems="10"
+        android:hint="@string/username_placeholder" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="27dp"
+        android:ems="10"
+        android:hint="@string/password_placeholder"
+        android:inputType="textPassword" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/password"
+        android:text="@string/login_button_text" />
+
+</RelativeLayout>
