--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -1,36 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:background="@color/black" >
 
-    <EditText
-        android:id="@+id/username"
+    <ImageView
+        android:id="@+id/title_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:ems="10"
-        android:hint="@string/username_placeholder" />
+        android:layout_below="@id/title_image"
+        android:src="@drawable/discover_logo"
+        android:contentDescription="@string/image_description" 
+        android:layout_marginTop="8dp"/>
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="27dp"
-        android:ems="10"
-        android:hint="@string/password_placeholder"
-        android:inputType="textPassword" >
+        android:layout_below="@id/title_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rounded_table_corners_shape"
+        android:orientation="vertical" >
 
-        <requestFocus />
-    </EditText>
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/password"
-        android:text="@string/login_button_text" />
+            <ImageView
+                android:id="@+id/small_card_icon_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/card_login_button_text"
+                android:src="@drawable/card_icon" />
+
+            <TextView
+                android:id="@+id/secure_card_login_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:text="@string/secure_login"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/orange" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/user_id_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" >
+
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/username_placeholder" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/user_pass_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/password_placeholder"
+                android:inputType="textPassword" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/remember_user_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0" >
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/remember_user_id" />
+
+            <ToggleButton
+                android:id="@+id/toggle_button_save_user_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:textOff="No"
+                android:textOn="Yes" 
+                android:paddingRight="16dp"/>
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/login_button_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_weight="0" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:clickable="false"
+                android:longClickable="false"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight=".3"
+                android:text="@string/register_now"
+                android:textColor="@color/blue" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight=".1"
+                android:contentDescription="@string/image_description"
+                android:src="@drawable/blue_arrow_small" />
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:text="@string/login_button_text" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/forgot_id_and_pass_row"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:clickable="false"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_id_or_pass_label"
+                android:textColor="@color/blue" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/table_width_row"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content" >
+
+        </TableRow>
+
+    </LinearLayout>
 
 </RelativeLayout>
