--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -176,6 +176,23 @@
         </TableRow>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_below="@id/linearLayout1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/login_box_reflection"
+        android:orientation="vertical" >
+
+        <TableRow
+            android:id="@+id/TableRow01"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content" >
+        </TableRow>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/feedback_textview"
         android:layout_width="wrap_content"
