Added backgrounds to login landing and login screens. Changed login input text color to black, instead of a default light grey that was unreadable on the emulator.

--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -74,7 +74,8 @@
                 android:hint="@string/username_placeholder"
                 android:imeOptions="actionNext"
                 android:inputType="textNoSuggestions"
-                android:maxLines="@integer/MAX_INPUT_LINES" >
+                android:maxLines="@integer/MAX_INPUT_LINES"
+                android:textColor="@color/black" >
 
                 <requestFocus />
             </EditText>
@@ -87,7 +88,9 @@
                 android:ems="10"
                 android:hint="@string/password_placeholder"
                 android:inputType="textPassword"
-                android:maxLines="@integer/MAX_INPUT_LINES" />
+                android:maxLines="@integer/MAX_INPUT_LINES"
+                android:textColor="@color/black" />
+
         </RelativeLayout>
 
         <TableRow
