--- a/Phone/main/res/values/resources.xml
+++ b/Phone/main/res/values/resources.xml
@@ -2,18 +2,18 @@
 <resources>
     <string-array name="month_array">
         <item>Month</item>
-        <item>(01) January</item>
-        <item>(02) February</item>
-        <item>(03) March</item>
-        <item>(04) April</item>
-        <item>(05) May</item>
-        <item>(06) June</item>
-        <item>(07) July</item>
-        <item>(08) August</item>
-        <item>(09) September</item>
-        <item>(10) October</item>
-        <item>(11) November</item>
-        <item>(12) December</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
     
     <string-array name="year_array">
@@ -29,5 +29,56 @@
         <item>2020</item>
         <item>2021</item>
         <item>2022</item>
+    </string-array>
+    
+    <string-array name="day_array">
+        <item>Day</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+		<item>05</item>
+ 		<item>06</item>
+		<item>07</item>
+		<item>08</item>
+		<item>09</item>
+		<item>10</item>
+		<item>11</item>
+		<item>12</item>
+		<item>13</item>
+		<item>14</item>
+		<item>15</item>
+		<item>16</item>
+		<item>17</item>
+		<item>18</item>
+        <item>19</item>
+ 		<item>20</item>
+ 		<item>21</item>
+ 		<item>22</item>
+ 		<item>23</item>
+ 		<item>24</item>
+ 		<item>25</item>
+ 		<item>26</item>
+ 		<item>27</item>
+ 		<item>28</item>
+ 		<item>29</item>
+ 		<item>30</item>
+ 		<item>31</item>
+    </string-array>
+    
+    <string-array name="better_month_array">
+        <item>Month</item>
+        <item>(01) January</item>
+        <item>(02) February</item>
+        <item>(03) March</item>
+        <item>(04) April</item>
+        <item>(05) May</item>
+        <item>(06) June</item>
+        <item>(07) July</item>
+        <item>(08) August</item>
+        <item>(09) September</item>
+        <item>(10) October</item>
+        <item>(11) November</item>
+        <item>(12) December</item>
     </string-array>
 </resources>
