--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/account_info_scroll_view"
             android:layout_width="fill_parent"
@@ -238,7 +236,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/continue_text"
-                android:layout_marginLeft="16dp" />
+                android:layout_marginLeft="16dp" 
+                android:onClick="submitCurrentAccountInfo"/>
 
         </TableRow>
 
